--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,26 @@ spring:
             - Path=/review-service/**
           filters:
             - CustomFilter
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:3000"
+            allow-credentials: true
+            allowedHeaders:
+              - x-requested-with
+              - authorization
+              - content-type
+              - credential
+              - X-AUTH-TOKEN
+              - X-CSRF-TOKEN
+            allowedMethods:
+              - POST
+              - GET
+              - PUT
+              - OPTIONS
+              - DELETE
+
+
 
 eureka:
   client:
