server address를 profile별로 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8000
+  address: 127.0.0.1
 
 spring:
   application:
@@ -32,7 +33,7 @@ spring:
           filters:
             - CustomFilter
         - id: openapi
-          uri: http://localhost:${server.port}
+          uri: http://${server.address}:${server.port}
           predicates:
             - Path=/v3/api-docs/**
           filters:
@@ -75,10 +76,14 @@ spring:
     activate:
       on-profile: local
 
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+server:
+  address: 127.0.0.1
 
 ---
 
@@ -91,3 +96,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://10.0.140.187:8761/eureka
+
+server:
+  address: 13.124.70.83
