--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,8 +40,8 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowed-origin-patterns:
-              - '*'
+            allowed-origins:
+              - "http://localhost:3000"
             allow-credentials: true
             allowedHeaders:
               - x-requested-with
