--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,6 +54,7 @@ spring:
               - POST
               - GET
               - PUT
+              - PATCH
               - OPTIONS
               - DELETE
 springdoc:
