--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>springdoc-openapi-webflux-ui</artifactId>
             <version>1.6.11</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
